--- a/pricePrediction/One Variable LSTM.ipynb
+++ b/pricePrediction/One Variable LSTM.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -45,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_quandl_data(quandl_id):\n",
     "    '''Download and cache Quandl dataseries'''\n",
-    "    cache_path = 'data/{}.pkl'.format(quandl_id).replace('/','-')\n",
+    "    cache_path = '{}.pkl'.format(quandl_id).replace('/','-')\n",
     "    try:\n",
     "        f = open(cache_path, 'rb')\n",
     "        df = pickle.load(f)   \n",
@@ -74,16 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded BCHARTS/KRAKENUSD from cache\n",
-      "Loaded BCHARTS/COINBASEUSD from cache\n",
-      "Loaded BCHARTS/BITFINEXUSD from cache\n",
+      "Downloading BCHARTS/KRAKENUSD from Quandl\n",
+      "Cached BCHARTS/KRAKENUSD at BCHARTS-KRAKENUSD.pkl\n",
+      "Downloading BCHARTS/COINBASEUSD from Quandl\n",
+      "Cached BCHARTS/COINBASEUSD at BCHARTS-COINBASEUSD.pkl\n",
+      "Downloading BCHARTS/BITFINEXUSD from Quandl\n",
+      "Cached BCHARTS/BITFINEXUSD at BCHARTS-BITFINEXUSD.pkl\n",
       "{'KRAKEN':                   Open        High         Low       Close  Volume (BTC)  \\\n",
       "Date                                                                       \n",
       "2014-01-07   874.67040   892.06753   810.00000   810.00000     15.622378   \n",
@@ -117,10 +127,6 @@
       "2014-02-04   808.00000   819.78000   799.57900   802.40000     11.425937   \n",
       "2014-02-05   802.40000   815.89934   802.40000   802.50000     16.587834   \n",
       "...                ...         ...         ...         ...           ...   \n",
-      "2017-10-07  4363.10000  4440.00000  4318.50000  4432.00000   2320.463852   \n",
-      "2017-10-08  4423.20000  4615.10000  4407.10000  4592.00000   4105.517197   \n",
-      "2017-10-09  4594.40000  4875.00000  4555.00000  4772.10000   5241.182325   \n",
-      "2017-10-10  4774.90000  4919.00000  4712.40000  4748.50000   5679.179929   \n",
       "2017-10-11  4745.40000  4878.00000  4710.20000  4822.60000   3619.274646   \n",
       "2017-10-12  4824.20000  5430.00000  4812.20000  5429.70000   7950.666610   \n",
       "2017-10-13  5429.80000  5854.40000  5380.10000  5640.00000   9222.144339   \n",
@@ -146,7 +152,11 @@
       "2017-11-02  6741.80000  7289.00000  6710.80000  7007.30000   7346.374226   \n",
       "2017-11-03  7020.30000  7449.00000  6894.10000  7160.00000   4840.042536   \n",
       "2017-11-04  7160.00000  7480.00000  6934.10000  7369.90000   2705.035039   \n",
-      "2017-11-05  7366.50000  7575.00000  7297.00000  7342.00000   2431.355756   \n",
+      "2017-11-05  7366.50000  7575.00000  7297.00000  7380.00000   2604.588509   \n",
+      "2017-11-06  7374.70000  7449.00000  6920.00000  6969.00000   4961.192013   \n",
+      "2017-11-07  6970.30000  7273.10000  6942.00000  7128.10000   2974.537723   \n",
+      "2017-11-08  7128.10000  7788.00000  7097.00000  7463.50000   6190.612581   \n",
+      "2017-11-09  7460.00000  7462.30000  7460.00000  7460.10000      1.352533   \n",
       "\n",
       "            Volume (Currency)  Weighted Price  \n",
       "Date                                           \n",
@@ -181,10 +191,6 @@
       "2014-02-04       9.222591e+03      807.162794  \n",
       "2014-02-05       1.333197e+04      803.719720  \n",
       "...                       ...             ...  \n",
-      "2017-10-07       1.012472e+07     4363.229730  \n",
-      "2017-10-08       1.851259e+07     4509.198256  \n",
-      "2017-10-09       2.463189e+07     4699.681608  \n",
-      "2017-10-10       2.736392e+07     4818.286994  \n",
       "2017-10-11       1.738064e+07     4802.244410  \n",
       "2017-10-12       4.103676e+07     5161.424147  \n",
       "2017-10-13       5.178706e+07     5615.511555  \n",
@@ -210,9 +216,13 @@
       "2017-11-02       5.118178e+07     6966.943635  \n",
       "2017-11-03       3.507105e+07     7246.020896  \n",
       "2017-11-04       1.958950e+07     7241.866100  \n",
-      "2017-11-05       1.813717e+07     7459.694613  \n",
+      "2017-11-05       1.940652e+07     7450.897130  \n",
+      "2017-11-06       3.578951e+07     7213.892964  \n",
+      "2017-11-07       2.116621e+07     7115.797600  \n",
+      "2017-11-08       4.588957e+07     7412.766709  \n",
+      "2017-11-09       1.009076e+04     7460.640985  \n",
       "\n",
-      "[1399 rows x 7 columns], 'COINBASE':                Open     High      Low    Close  Volume (BTC)  \\\n",
+      "[1403 rows x 7 columns], 'COINBASE':                Open     High      Low    Close  Volume (BTC)  \\\n",
       "Date                                                           \n",
       "2015-02-04   228.77   230.25   221.85   227.11   3344.120783   \n",
       "2015-05-11   241.59   245.49   239.50   242.86   6176.481242   \n",
@@ -245,10 +255,6 @@
       "2015-06-07   225.48   226.09   222.88   223.89   3622.802860   \n",
       "2015-06-08   223.88   230.16   223.63   229.10   6964.064852   \n",
       "...             ...      ...      ...      ...           ...   \n",
-      "2017-10-07  4363.00  4449.42  4320.00  4425.00   4002.011474   \n",
-      "2017-10-08  4425.00  4612.00  4420.01  4603.49   6993.215902   \n",
-      "2017-10-09  4603.50  4875.39  4561.00  4769.55  13939.336770   \n",
-      "2017-10-10  4769.55  4925.65  4701.53  4750.00  13399.506115   \n",
       "2017-10-11  4750.00  4869.97  4720.21  4814.99   7193.558954   \n",
       "2017-10-12  4814.99  5440.92  4809.68  5440.00  19723.675704   \n",
       "2017-10-13  5440.00  5867.00  5390.00  5624.80  25796.044540   \n",
@@ -274,7 +280,11 @@
       "2017-11-02  6783.69  7445.00  6759.00  7039.98  34174.286889   \n",
       "2017-11-03  7039.99  7449.99  6955.89  7170.01  23207.160268   \n",
       "2017-11-04  7170.01  7498.00  7011.10  7412.55  13409.869047   \n",
-      "2017-11-05  7412.35  7630.00  7323.00  7325.07  14554.023144   \n",
+      "2017-11-05  7412.35  7630.00  7310.00  7392.00  15538.984929   \n",
+      "2017-11-06  7391.95  7432.49  6900.73  6969.76  23458.853109   \n",
+      "2017-11-07  6969.76  7232.84  6968.49  7126.63  14167.964205   \n",
+      "2017-11-08  7128.99  7898.00  7031.66  7467.96  36746.173154   \n",
+      "2017-11-09  7467.97  7467.97  7460.00  7460.00     47.341707   \n",
       "\n",
       "            Volume (Currency)  Weighted Price  \n",
       "Date                                           \n",
@@ -309,10 +319,6 @@
       "2015-06-07       8.132336e+05      224.476357  \n",
       "2015-06-08       1.582658e+06      227.260662  \n",
       "...                       ...             ...  \n",
-      "2017-10-07       1.747880e+07     4367.504626  \n",
-      "2017-10-08       3.166245e+07     4527.594663  \n",
-      "2017-10-09       6.572267e+07     4714.906671  \n",
-      "2017-10-10       6.466949e+07     4826.258931  \n",
       "2017-10-11       3.451575e+07     4798.147144  \n",
       "2017-10-12       1.017913e+08     5160.870725  \n",
       "2017-10-13       1.449768e+08     5620.117992  \n",
@@ -338,9 +344,13 @@
       "2017-11-02       2.391562e+08     6998.131684  \n",
       "2017-11-03       1.680482e+08     7241.222830  \n",
       "2017-11-04       9.790454e+07     7300.931780  \n",
-      "2017-11-05       1.091442e+08     7499.247602  \n",
+      "2017-11-05       1.163953e+08     7490.535273  \n",
+      "2017-11-06       1.679212e+08     7158.114746  \n",
+      "2017-11-07       1.005557e+08     7097.400998  \n",
+      "2017-11-08       2.726131e+08     7418.816871  \n",
+      "2017-11-09       3.534911e+05     7466.801298  \n",
       "\n",
-      "[788 rows x 7 columns], 'BITFINEX':                   Open        High        Low       Close  Volume (BTC)  \\\n",
+      "[792 rows x 7 columns], 'BITFINEX':                   Open        High        Low       Close  Volume (BTC)  \\\n",
       "Date                                                                      \n",
       "2013-03-31   93.250000  100.000000   93.03000   93.100000    390.827224   \n",
       "2013-04-01   93.170000  105.900000   92.49999  102.370000   4919.654127   \n",
@@ -4219,13 +4229,7 @@
       "1175/1175 [==============================] - 0s - loss: 0.0034 - val_loss: 0.0080\n",
       "Epoch 85/300\n",
       "1175/1175 [==============================] - 0s - loss: 0.0024 - val_loss: 0.0073\n",
-      "Epoch 86/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 86/300\n",
       "1175/1175 [==============================] - 0s - loss: 0.0020 - val_loss: 0.0077\n",
       "Epoch 87/300\n",
       "1175/1175 [==============================] - 0s - loss: 0.0025 - val_loss: 0.0078\n",
@@ -4571,13 +4575,7 @@
       "1175/1175 [==============================] - 0s - loss: 0.0018 - val_loss: 0.0076\n",
       "Epoch 255/300\n",
       "1175/1175 [==============================] - 0s - loss: 0.0018 - val_loss: 0.0122\n",
-      "Epoch 256/300\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 256/300\n",
       "1175/1175 [==============================] - 0s - loss: 0.0027 - val_loss: 0.0089\n",
       "Epoch 257/300\n",
       "1175/1175 [==============================] - 0s - loss: 0.0027 - val_loss: 0.0102\n",
